# foreclosure

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: apps_script.gs  backup.sh  foreclosure-bot.service  foreclosure-bot.timer  setup.sh
docs/superpowers/plans/: 2026-05-07-berkeley-foreclosure-bot.md
docs/superpowers/specs/: 2026-05-07-berkeley-foreclosure-bot-design.md
scripts/: discover_arcgis_fields.py  smoke_court.py  smoke_gis.py
src/foreclosure_bot/: __init__.py  __main__.py  alerts.py  config.py  court_scraper.py  dedupe.py  gis_lookup.py  models.py  pipeline.py  sheet_writer.py  tracerfy.py
tests/: conftest.py  test_alerts.py  test_config.py  test_court_scraper.py  test_dedupe.py  test_entrypoint.py  test_gis_lookup.py  test_models.py  test_pipeline.py  test_sheet_writer.py  test_tracerfy.py
tests/fixtures/: arcgis_response.json  court_case_detail.html  court_search_results.html
