[project]
name = "foreclosure-bot"
version = "0.1.0"
description = "Berkeley County SC foreclosure scraper + skip trace"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.45",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
]

[project.scripts]
foreclosure-bot = "foreclosure_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
